# meow-ios

./: .gitignore  .swiftformat  .swiftlint.yml  AGENTS.md  CLAUDE.md  DevelopmentTeam.xcconfig.example  PRIVACY.md  README.md  project.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
App/: App.entitlements  Info.plist
App/Resources/: UITestsFixtureProfile.yaml
App/Resources/en.lproj/: Localizable.strings
App/Resources/geox/: README.md
App/Resources/zh-Hans.lproj/: Localizable.strings
App/Sources/: AppModel.swift  AppModelContainer.swift  BridgingHeader.h  MeowApp.swift
App/Sources/Models/: DailyTraffic.swift  Profile.swift  ProxyGroupModel.swift
App/Sources/Services/: AppIPCBridge.swift  AssetSeeder.swift  DailyTrafficAccumulator.swift  MihomoAPI.swift  MihomoAPITypes.swift  MihomoGoBridge.swift  SelectedProxyRestorer.swift  SubscriptionConverter.swift  SubscriptionDeepLink.swift  SubscriptionService.swift  UITestsSeeder.swift  VpnManager.swift
App/Sources/Views/: ConnectionsView.swift  ContentView.swift  DiagnosticsView.swift  DiagnosticsViewController.swift  GlassCard.swift  HomeView.swift  LogsView.swift  ProvidersView.swift  ProxyGroupsView.swift  RulesView.swift  SettingsView.swift  SubscriptionsView.swift  TrafficView.swift  UserDiagnosticsView.swift  YamlEditorView.swift
MeowCore/include/: mihomo_core.h  mihomo_go.h  mihomo_ios_ffi.h
MeowIntegrationTests/: .swiftformat  README.md
MeowIntegrationTests/EngineIntegration/: EngineBootTests.swift  TunBridgeTests.swift
MeowIntegrationTests/IPC/: IPCRoundTripTests.swift
MeowIntegrationTests/ProtocolFixtures/: UDPProtocolTests.swift
MeowIntegrationTests/Screens/: ConnectionsScreenTests.swift
MeowIntegrationTests/SwiftData/: ConcurrentAccessTests.swift
MeowIntegrationTests/VPNLifecycle/: TunnelLifecycleTests.swift  TunnelSettingsLANExclusionTests.swift
MeowShared/: Package.swift
MeowShared/Sources/MeowIPC/: DarwinNotifications.swift  DiagnosticsIPC.swift  SharedStore.swift
MeowShared/Sources/MeowModels/: AppGroup.swift  DiagnosticsContract.swift  EffectiveConfigWriter.swift  IdentifierSlug.swift  Preferences.swift  VpnState.swift
MeowShared/Tests/MeowSharedTests/: DiagnosticsIPCTests.swift  EffectiveConfigWriterTests.swift  PreferencesTests.swift
MeowTests/: .swiftformat  README.md
MeowTests/API/: ConnectionsTests.swift  LogsTests.swift  MihomoAPITests.swift  RulesTests.swift
MeowTests/Diagnostics/: DiagnosticsLabelParserTests.swift
MeowTests/FFI/: MihomoCoreBridgeTests.swift  MihomoFfiBridgeTests.swift  MihomoGoBridgeTests.swift
MeowTests/Fixtures/: README.md
MeowTests/Fixtures/nodelist/: v2rayn_ss_pair.txt
MeowTests/Fixtures/yaml/: clash_empty.yaml  clash_full.yaml  clash_malformed.yaml  clash_minimal.yaml
MeowTests/IPC/: DarwinBridgeTests.swift  SharedStoreTests.swift
MeowTests/Models/: IdentifierSlugTests.swift  ProfileTests.swift
MeowTests/Parsing/: SubscriptionParserTests.swift
MeowTests/Security/: KeychainStoreTests.swift  URLValidationTests.swift
MeowTests/Services/: SelectedProxyRestorerTests.swift  SubscriptionDeepLinkTests.swift  SubscriptionServiceTests.swift  TrafficAccumulatorTests.swift  VpnManagerTests.swift
MeowTests/Support/: SwiftDataTestContainer.swift  URLProtocolStub.swift
MeowUITests/: README.md
MeowUITests/Flows/: AddSubscriptionFlowTests.swift  E2E5CheckGateTests.swift  LocalE2ETests.swift  VpnToggleFlowTests.swift  YamlEditorFlowTests.swift
MeowUITests/Screens/: AccessibilityTests.swift  HomeScreenTests.swift  SettingsScreenTests.swift  TrafficScreenTests.swift
MeowUITests/Support/: FiveCheckGateDriver.swift  MeowApp.swift  VPhone.swift
PacketTunnel/: Info.plist
PacketTunnel/Sources/: BridgingHeader.h  DiagnosticsRunner.swift  IPCListener.swift  MWAppGroup.h  MWAppGroup.m  MWDarwinBridge.h  MWDarwinBridge.m  MWDiagnosticsRunner.h  MWDiagnosticsRunner.m  MWIPCListener.h  MWIPCListener.m  MWPacketWriter.h  MWPacketWriter.m  MWPreferences.h  MWPreferences.m  MWSharedStore.h  MWSharedStore.m  MWTunnelEngine.h  MWTunnelEngine.m  MWTunnelSettings.h  MWTunnelSettings.m  PacketPump.swift  PacketTunnelProvider.h  PacketTunnelProvider.m  PacketTunnelProvider.swift  PacketWriter.swift  TunnelEngine.swift  TunnelSettings.swift
core/go/mihomo-ios/: convert.go  convert_test.go  diagnostics.go  engine.go  exports.go  go.mod  go.sum  log_ios.go  log_stub.go  protect.go  stats.go
core/rust/mihomo-ios-ffi/: Cargo.toml  build.rs  cbindgen.toml
core/rust/mihomo-ios-ffi/src/: china_dns.rs  diagnostics.rs  dns_client.rs  dns_table.rs  doh_cache.rs  doh_client.rs  engine.rs  lib.rs  logging.rs  subscription.rs  tun2socks.rs  xdg_home_dir_tests.rs
core/rust/mihomo-ios-ffi/src/listener/: http_proxy.rs  mixed.rs  mod.rs  socks5.rs
core/rust/mihomo-ios-ffi/tests/fixtures/: README.md  subscription_ss_like.yaml
docs/: BUILD.md  M4-KICKOFF.md  PRD.md  PROJECT_PLAN.md  RUNNER.md  T4.8-SETTINGS-BRIEF.md  TEST_FIXTURES.md  TEST_STRATEGY.md  index.html  source.json
docs/adr/: ADR-004-iosappomac-rejected-for-gate.md  ADR-004-macos-host-path.md
metadata/en-US/: description.txt  keywords.txt  promotional_text.txt  release_notes.txt  subtitle.txt  support_url.txt
metadata/testflight/: beta_app_description.txt  beta_app_feedback_email.txt  beta_app_marketing_url.txt
metadata/testflight/whats_new/: 2026042501.txt  2026042502.txt  2026042906.txt  2026043001.txt
metadata/testflight/zh-Hans/: beta_app_description.txt
metadata/testflight/zh-Hans/whats_new/: 2026042501.txt  2026042502.txt  2026042906.txt  2026043001.txt
metadata/zh-Hans/: description.txt  keywords.txt  privacy_url.txt  promotional_text.txt  release_notes.txt  subtitle.txt
scripts/: build-adhoc.sh  build-go.sh  build-release.sh  build-rust.sh  fetch-geo-assets.sh  generate-app-icon.sh  generate-xcodeproj.sh  provision-tart-fixtures.sh  sync-firebase-udids.py  test-e2e-ios.sh  upload-firebase-distribution.sh  upload-testflight-metadata.py  upload-testflight.sh
