[package]
name = "mihomo-ios-ffi"
version = "0.1.0"
edition = "2021"
description = "mihomo-rust engine + tun2socks + DoH for meow-ios — C ABI, no Go, no JNI. Mirrors madeye/meow (Android) architecture: netstack-smoltcp → SOCKS5 loopback → mihomo mixed listener."

[lib]
crate-type = ["staticlib"]

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "signal"] }
parking_lot = "0.12"
futures = "0.3"
# Explicit pin — transitive through mihomo-tunnel, but engine.rs builds
# `DashMap<String, Arc<ProxyProvider>>` for ApiServer::new. Match upstream's 6.x.
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
oslog = { version = "0.2", default-features = false, features = ["logger"] }

# HTTP / YAML / serialization
# DoH is dispatched through the local SOCKS5 mixed listener (mirrors the
# madeye/meow Android reference): reqwest routes the DoH POST via
# `socks5h://127.0.0.1:<mixed-port>` so the request follows the user's configured
# proxy rules without us building a second TCP path. `rustls` stays for the
# process-wide ring provider install — required by mihomo-tunnel's TLS outbound.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Low-level
libc = "0.2"
anyhow = "1"

# Subscription parsing (v2rayN URI list → Clash YAML)
base64 = "0.22"
url = "2"
urlencoding = "2"

# tun2socks
netstack-smoltcp = "0.2"

# Embedded mihomo-rust engine. Pinned to main; revisit once the project tags
# releases. Each crate is a workspace member of madeye/mihomo-rust.
mihomo-common = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-config = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-dns = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-tunnel = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-api = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-proxy = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
# xdg_home_dir_tests probes the env-var wire-up via the GeoIP load path;
# maxminddb version matches the workspace pin mihomo-config resolves.
tempfile = "3"
maxminddb = "0.27"

[profile.release]
# Shrink binary for the 50MB extension budget. mihomo-rust adds significant
# weight; LTO + size-optimized codegen keeps us within the NE resident-memory
# ceiling.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
