[package]
name = "mihomo-ios-ffi"
version = "0.1.0"
edition = "2021"
description = "mihomo-rust engine + tun2socks + DoH for meow-ios — C ABI, no Go, no JNI."

[lib]
crate-type = ["staticlib"]

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "signal"] }
parking_lot = "0.12"
futures = "0.3"
# Explicit pin — transitive through mihomo-tunnel, but engine.rs builds
# `DashMap<String, Arc<ProxyProvider>>` for ApiServer::new and tun2socks.rs
# uses the same NAT-key concrete type as mihomo-tunnel. Match upstream's 6.x.
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
oslog = { version = "0.2", default-features = false, features = ["logger"] }

# HTTP / YAML / serialization
# DoH dispatches per-request through `mihomo_tunnel::tcp::handle_tcp` over a
# `tokio::io::duplex` pair (no loopback listener), so we need hyper + tokio-rustls
# directly rather than reqwest's pooled client + Proxy machinery.
hyper = { version = "1", default-features = false, features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Low-level
libc = "0.2"
anyhow = "1"

# Subscription parsing (v2rayN URI list → Clash YAML)
base64 = "0.22"
url = "2"
urlencoding = "2"

# tun2socks
netstack-smoltcp = "0.2"

# Persistent DoH answer cache (single-writer KV at $HOME_DIR/doh-cache.redb).
# Pure-Rust, mmap-backed; survives PacketTunnel restarts so cold starts don't
# repay the burst of fanout queries from launch flows.
redb = "2"

# Embedded mihomo-rust engine. Pinned to main; revisit once the project tags
# releases. Each crate is a workspace member of madeye/mihomo-rust.
mihomo-common = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-config = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-dns = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-tunnel = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-api = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }
mihomo-proxy = { git = "https://github.com/madeye/mihomo-rust", branch = "main" }

# Pin smoltcp to a v0.12.0 fork that backports upstream commit f56ed8b
# ("tcp: Reject bytes outside the receive window"). Without it, peers that
# accept bytes past our advertised window edge trigger a panic in
# smoltcp::socket::tcp::Socket::last_scaled_window via the SeqNumber
# subtraction underflow guard, aborting the PacketTunnel process. The fix
# is in upstream main but has not been released; netstack-smoltcp 0.2 still
# pins smoltcp 0.12, so a 0.13 bump would also need to fork netstack-smoltcp.
[patch.crates-io]
smoltcp = { git = "https://github.com/madeye/smoltcp", branch = "fix/reject-bytes-outside-recv-win" }

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
# xdg_home_dir_tests probes the env-var wire-up via the GeoIP load path;
# maxminddb version matches the workspace pin mihomo-config resolves.
tempfile = "3"
maxminddb = "0.27"

[profile.release]
# Shrink binary for the 50MB extension budget. mihomo-rust adds significant
# weight; LTO + size-optimized codegen keeps us within the NE resident-memory
# ceiling.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
